# Pryzm-Network-Test

./: .gitignore  README.md  dev.nix  flake.nix
reward-contract/: Cargo.toml
reward-contract/artifacts/: checksums.txt  reward_contract.wasm
reward-contract/src/: contract.rs  error.rs  msg.rs  state.rs
wtoken/: Cargo.toml
wtoken/artifacts/: checksums.txt  wtoken.wasm
wtoken/src/: contract.rs  error.rs  msg.rs
