[package]
name = "reward-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "2.0.3", features = ["staking"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw-storage-plus = "2.0.0"
thiserror = "1"
schemars = "0.8.1"
cosmwasm-schema = "2.0.3"
cw-utils = "2.0.0"
cw20 = "2.0.0"

[dev-dependencies]
lazy_static = "1.4.0"

[features]
library = []
